[package]
name = "archiver"
version = "0.1.0"
edition = "2021"
description = "免费macos解压缩软件 — ZIP/7z/RAR/TAR 解压与 ZIP、tar.gz 压缩"

[dependencies]
anyhow = "1"
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.29"
rfd = "0.15"
zip = { version = "2", default-features = false, features = [
    "deflate",
    "bzip2",
    "zstd",
] }
tar = "0.4"
flate2 = "1"
bzip2 = "0.5"
xz2 = "0.1"
zstd = "0.13"
sevenz-rust = { version = "0.6", features = ["bzip2", "zstd"] }
unrar = "0.5"
walkdir = "2"
